# Prime-World

./: .gitattributes  .gitignore  LICENSE.md  README.md  README_Chinese.md  README_English.md  README_French.md  README_German.md  README_Hindi.md  README_Indonesian.md  README_Japanese.md  README_Portuguese.md  README_Russian.md  README_Spanish.md
pw/branches/r1117/Src/: Application.manifest  Application.rc  ApplicationResources.h  CMakeLists.txt  CommonAssemblyInfo.cs  CommonAssemblyInfo.cs.xslt  PF.component  PF.sln  PF_Version.config  SocialTypes_12.sln  Version.h  Version.h.xslt  Version.rc  run_cmake.bat
pw/branches/r1117/Src/Client/: AdventureScreenBaseClient.h  Base.component  BaseOvertipsScreenLogic.cpp  BaseOvertipsScreenLogic.h  Client.vcproj  CommandBinds.component  CommandBinds.cpp  CommandBinds.h  Console.component  Console.cpp  Console.h  ConsoleLogic.cpp  ConsoleLogic.h  DebugTextDraw.component  DebugTextDraw.cpp  DebugTextDraw.h  DefaultScreenBase.cpp  DefaultScreenBase.h  MainLoop.component  MainLoop.cpp  MainLoop.h  MainLoop.test.cpp  MainTimer.cpp  MainTimer.h  MessageDialog.h  MessageScreen.component  MessageScreen.cpp  MessageScreen.h  MessageScreenLogic.cpp  MessageScreenLogic.h  Messages.h  Overtips.h  ScreenBase.h  ScreenCommands.cpp  ScreenCommands.h  ScreenUILogicBase.cpp  ScreenUILogicBase.h  Screens.component  Timer.component  Tooltips.component  (+13 more)
pw/branches/r1117/Src/ClusterAdminSvc/: ClusterAdminSvc.vcproj
pw/branches/r1117/Src/Core/: AdventureScriptMachine.cpp  AdventureScriptMachine.h  BaseFSM.cpp  BaseFSM.h  BaseState.cpp  BaseState.h  BinStatsCollector.cpp  BinStatsCollector.h  ClientWorldFactory.cpp  ClientWorldFactory.h  CommandSerializer.cpp  CommandSerializer.h  CommandSerializer.test.cpp  Core.vcproj  CoreFSM.component  CoreFSM.cpp  CoreFSM.h  CoreFSMState.cpp  CoreFSMState.h  GameCommand.cpp  GameCommand.h  GameTypes.component  GameTypes.cpp  GameTypes.h  NetMessageHandler.h  NetMessagesProcessor.cpp  NetMessagesProcessor.h  RemoteCommandScheduler.cpp  RemoteCommandScheduler.h  Replay.component  Replay.cpp  Replay.h  Scheduler.h  SessionRunner.h  StateAudit.cpp  StateAudit.h  StateCreatingGame.cpp  StateCreatingGame.h  StateGameConnect.cpp  StateGameConnect.h  (+33 more)
pw/branches/r1117/Src/DBCodeGen/: DBCodeGen.Assemblies.cs  DBCodeGen.FileProcess.cs  DBCodeGen.FileProcessSocial.cs  DBCodeGen.Solution.cs  DBCodeGen.TypeHelper.cs  DBCodeGen.cs  DBCodeGen.csproj
pw/branches/r1117/Src/Docs/: Doxyfile  build_dox.bat
pw/branches/r1117/Src/EaselLevelEditor/: AddPointForm.Designer.cs  AddPointForm.cs  EaselLevelEditor.Designer.cs  EaselLevelEditor.cd  EaselLevelEditor.cs  EaselLevelEditor.csproj  EaselLevelInfoForm.Designer.cs  EaselLevelInfoForm.cs  EaselScaler.cs  EaselSpline.cs  EditorPoint.cs  Program.cs  RemovePointForm.Designer.cs  RemovePointForm.cs  SplineXDBLoader.cs  SplineXDBLoaderEx.cs  SplineXDBSavelEx.cs  SplineXDBSaver.cs  SplineXMLLoader.cs  SplineXMLSaver.cs
pw/branches/r1117/Src/EditorLib/: CollectionUtils.cs  EditorApplicationInterface.cs  EditorCommonApplication.cs  EditorLib.csproj  EditorLibResources.Designer.cs  EditorLibResources.resx  Functions.component  Functions.cs  H6Clipboard.cs  ImprovedTreeView.cs  MainFormConfig.cs  NameUtils.cs  ShortcutsInterceptor.cs  all.component
pw/branches/r1117/Src/EditorNative/: AABBSceneElement.cpp  AABBSceneElement.h  AGController.cpp  AGController.h  AxisMoverElement.cpp  AxisMoverElement.h  AxisRotatorElement.cpp  AxisRotatorElement.h  Bound.cpp  Bound.h  Camera.cpp  Camera.h  CameraPlaneMoverElement.cpp  CameraPlaneMoverElement.h  CameraPlaneRotatorElement.cpp  CameraPlaneRotatorElement.h  CinemaMode.cpp  CinemaMode.h  CollSceneObject.cpp  CollSceneObject.h  ComponentSceneElement.cpp  ComponentSceneElement.h  CompositeTransformController.cpp  CompositeTransformController.h  CubicSpline3D.cpp  CubicSpline3D.h  Editor2DSceneBase.cpp  Editor2DSceneBase.h  EditorDebugVars.cpp  EditorDebugVars.h  EditorDumper.cpp  EditorDumper.h  EditorFileSystem.cpp  EditorFileSystem.h  EditorMaterialScene.cpp  EditorMaterialScene.h  EditorNative.vcproj  EditorRender.cpp  EditorRender.h  EditorScene.cpp  (+95 more)
pw/branches/r1117/Src/EditorPlugins/: EditorConApplication.cs  EditorNativeApplication.cs  EditorPluginResources.Designer.cs  EditorPluginResources.resx  EditorPlugins.csproj  EditorWinApplication.cs  TileMap.cs  all.component  editorplugins.refs
pw/branches/r1117/Src/FormulaBuilder/: CoffFile.cpp  CoffFile.h  FormulaBuilder.cpp  FormulaBuilder.h  FormulaBuilder.vcproj
pw/branches/r1117/Src/MayaExeInteraction/: IMayaLauncher.cs  MayaCommand.cs  MayaExeInteraction.csproj  MayaImportCommand.cs  MayaLauncher.cs  MayaOperationsUtility.cs
pw/branches/r1117/Src/MayaExtension/: MayaExtension.vcproj  commandClasses.h  libs.h  plugin.cpp
pw/branches/r1117/Src/MemoryLib/: Dummy.component  Dummy.cpp  MemoryLib.vcproj  NewDelete.component  NewHandler.cpp  NewHandler.h  NewHandlerDetails.h  SymAccess.component  SymAccess.cpp  SymAccess.h  UserMessage.cpp  UserMessage.h  malloc.c.h  memorylib.refs  nedmalloc.cpp  newdelete.cpp  newdelete.h  stdafx.h
pw/branches/r1117/Src/MeshConverter/: MeshConverter.cpp  MeshConverter.vcproj  MeshHeader.h  MeshLoader.h  ParticleNewHeader.h  SkeletalAnimationHeader.h  SkeletonHeader.h  UberHeader.h  stdafx.cpp  stdafx.h
pw/branches/r1117/Src/Net/: LinksManager.cpp  LinksManager.h  LinksManagerContainer.cpp  Net.vcproj  NetA4.cpp  NetA4.h  NetAcks.cpp  NetAcks.h  NetAddress.cpp  NetAddress.h  NetDriver.h  NetLog.cpp  NetLog.h  NetLogin.cpp  NetLogin.h  NetLowest.cpp  NetLowest.h  NetPeer2Peer.cpp  NetPeer2Peer.h  NetServerInfo.cpp  NetServerInfo.h  NetStream.cpp  NetStream.h  Specific.h  TSList.cpp  TSList.h  all.component  stdafx.h
pw/branches/r1117/Src/Network/: Address.cpp  Address.h  AddressTranslator.h  ClientTransportConfig.component  ClientTransportConfig.cpp  ClientTransportConfig.h  ClientTransportSystem2.component  ClientTransportSystem2.cpp  ClientTransportSystem2.h  ClientTransportSystem3.component  ClientTransportSystem3.cpp  ClientTransportSystem3.h  (+121 more)
(+88937 files in other folders)
